	older ghc versions too. Make the build a little less chatty.

	* mk/chsDepend.in: be less chatty.

	* glib/System/Glib/FFI.hs, glib/System/Glib/GType.chs: in older ghc
	versions Foreign does not export unsafePerformIO, so import it from
	System.IO.Unsafe instead. Also conditionally export unsafePerformIO
	since older ghc versions do not export it from module Foreign.

2005-01-15 Duncan Coutts <duncan@coutts.uklinux.net>

	* mk/common.mk: change the way we find pacakge variables for files
	being built. It's now based only on the file name rather than through
	an inherited variable. Hopefully this will be less fragile.

	* Makefile.am: supply the new PKGNAME variables, remove the NAME
	variables required under the previous scheme. Add dependencies to make
	sure all appropriate .chs files exist before .dep files are generated.
	Put some built sources into nodist_<module>_SOURCES so they are not
	included in the tarball and fixup other rules affected by this.

	* mk/chsDepend.in: the assertion can now be enabled since it no	longer
	fails.

	* AUTHORS: credit Wolfram Kahl and co for mozembed. Add note about
	the documentation coming from Gtk sources. Update my entry.

2005-01-14 Duncan Coutts <duncan@coutts.uklinux.net>

	* mk/chsDepend.in: do the extra check properly and make it a warning
	by default. It still warns rather a lot.

	* Makefile.am: move a couple Types.chs locations/names and make sure
	the empty directories get included in the tarball. Disable building
	and distributing the apicoverage tool. Make sure Types and Signals
	files are removed on make clean.

	* mk/common.mk: make package registering on install work again after
	the earlier change to using pkglibdir.

	* mozembed/Graphics/UI/Gtk/MozEmbed.chs,
	gconf/System/Gnome/GConf/GConfClient.chs: change name of Types import.

2005-01-14  Jens Petersen  <petersen@haskell.org>

	* mogul/mogul.pkg.in (library_dirs): Use @GTK_LIBDIR_CQ@

	* configure.ac (hidir): Uses braces for default value.
